--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" href="/favicon.ico" />
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
+		<link rel="apple-touch-icon" href="/logo192.png" />
 		<title>Last Mile System Design | Bahrain</title>
+		<script defer="defer" src="/static/js/main.a5ec268a.js"></script>
+		<link href="/static/css/main.86ed5de1.css" rel="stylesheet" />
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
